# detect_agent

./: CHANGELOG.md  README.md  pyproject.toml
detect_agent/: __init__.py
tests/: test_detect_agent.py
